--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,4 +1,14 @@
+{% extends 'base.html' %}
+
+{% block title %}
+Page not found
+{% endblock %}
+
+{% block main %}
+
 <h1>Page not found</h1>
 
 <h2>We couldn't find what you are looking for. Return to the homepage.</h2>
 <p><a href="{{ url_for('home') }}">Home</a></p>
+
+{% endblock %}
